--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -72,7 +72,7 @@
           belongs to those who dare to dream and act with purpose.
         </p>
 
-        <a class="btn inspiration-btn" [routerLink]="['/founder-message']"> Discover His Legacy </a>
+        <a class="btn inspiration-btn" [routerLink]="['/about']"> Discover His Legacy </a>
       </div>
 
       <!-- Image -->
@@ -86,6 +86,7 @@
 </section>
 
 <!-- Subsections of Institute -->
+
 <section class="subsection-wrapper py-5 my-5 rounded-4">
   <div class="container">
     <!-- Section Heading -->
